--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "@types/compression": "^1.8.1",
     "@types/node": "^24.3.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
