--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "bun-types": "^1.1.20"
   },
   "peerDependencies": {
@@ -31,15 +32,18 @@
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.20.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nanoid": "^5.1.5",
     "prisma": "^6.14.0",
+    "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
     "tsx": "^4.20.5",
     "typescript": "^5",
