--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
+    "@types/qrcode": "^1.5.5",
     "bun-types": "^1.1.20"
   },
   "peerDependencies": {
@@ -41,8 +42,9 @@
     "mongodb": "^6.20.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "nanoid": "^5.1.5",
+    "nanoid": "^5.1.6",
     "prisma": "^6.14.0",
+    "qrcode": "^1.5.4",
     "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
     "tsx": "^4.20.5",
